log
Thu 23 Mar 2023 03:24:49 PM UTC: 
 tests:  0|6
total_score: 0/70
12f32c1
Thu 23 Mar 2023 03:33:10 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
134cc4b
Thu 23 Mar 2023 03:36:15 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
532f73d
Thu 23 Mar 2023 03:38:06 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
223df20
Thu 23 Mar 2023 03:39:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0721ac4
Thu 23 Mar 2023 03:41:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:10: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   38 |   return *(list->head);
      |          ^~~~~~~~~~~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e7582c5
Thu 23 Mar 2023 03:41:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1972cb3
Thu 23 Mar 2023 03:41:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b8416d8
Thu 23 Mar 2023 03:41:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
440da91
Thu 23 Mar 2023 03:43:09 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:3: error: expected ‘;’ before ‘else’
   39 |   else return list-> head -> data;
      |   ^~~~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e3935e8
Thu 23 Mar 2023 03:43:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e321c6a
